--- a/google-homepage/styles.css
+++ b/google-homepage/styles.css
@@ -13,6 +13,10 @@
     
 }
 
+#nav li {
+    list-style-type: none;
+}
+
 
 #nav .link, #nav .menu, #nav .avatar {
     margin-left: 15px;
@@ -27,21 +31,59 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    justify-content:space-between;
+    justify-content:center;
     
 }
 
+#search-group {
+    display: flex;
+    flex-direction: row;
+    margin: 50px 0px 50px 0px;
+    border-style: solid;
+    border-width: 2px;
+    border-color:darkgray;
+    border-radius: 7%;
+}
+
+#search-input {
+    border-width: 0px;
+}
+
+#search-glass svg{
+    height: 20px;
+    width: 20px;
+    fill: var(--color-gray-400);
+}
 
 #buttons {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin: 50px 0px 50px 0px;
 }
 
-#footer {
+#language {
     display: flex;
     align-self:center;
 }
+
+#footer-1, #footer-2 {
+    display: flex;
+    flex-direction: row;
+}
+
+#footer-1 li, #footer-2 li {
+    list-style-type:none;
+}
+
+.footer-left {
+    align-self: left;
+}
+
+#footer-2 .footer-right {
+    justify-self: right;
+}
+
 .logo {
     height: 120px;
 }
